# libcla

./: CMakeLists.txt  README.dev.md  README.md
include/cla/: cla.h
man/cla/: CLA.3  CLA_add_flag.3  CLA_add_optional.3  CLA_add_positionals.3  CLA_add_required.3  CLA_count_flag.3  CLA_create.3  CLA_destroy.3  CLA_get_exename.3  CLA_get_value_optional.3  CLA_get_value_positional.3  CLA_get_value_required.3  CLA_has_flag.3  CLA_has_optional.3  CLA_help_requested.3  CLA_parse.3  CLA_parsed_as.3  CMakeLists.txt
src/cla/: CMakeLists.txt  cla.c
src/example/: CMakeLists.txt  main.c
src/example_cla_add_flag/: CMakeLists.txt  main.c
src/example_cla_add_optional/: CMakeLists.txt  main.c
src/example_cla_add_positionals/: CMakeLists.txt  main.c
src/example_cla_add_required/: CMakeLists.txt  main.c
src/example_flag/: CMakeLists.txt  main.c
src/example_optional/: CMakeLists.txt  main.c
src/example_parse/: CMakeLists.txt  main.c
src/example_positionals/: CMakeLists.txt  main.c
src/example_required/: CMakeLists.txt  main.c
test/cla/: CMakeLists.txt  test_cla_add_flag.c  test_cla_add_optional.c  test_cla_add_positionals.c  test_cla_add_required.c  test_cla_count_flag.c  test_cla_get_exename.c  test_cla_get_value_optional.c  test_cla_get_value_positional.c  test_cla_get_value_required.c  test_cla_has_flag.c  test_cla_has_optional.c  test_cla_help_requested.c
